--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -82,8 +82,7 @@
     <section class="bg-container py-4 rounded-xl shadow-border-xs mb-6">
       <%= render partial: "pages/dashboard/cashflow_sankey", locals: {
         sankey_data: @cashflow_sankey_data,
-        period: @period,
-        include_investments: @include_investments
+        period: @period
       } %>
     </section>
 
