Initial enable banking implementation

--- a/app/views/settings/providers/show.html.erb
+++ b/app/views/settings/providers/show.html.erb
@@ -26,4 +26,10 @@
     </turbo-frame>
   <% end %>
 
+
+<%= settings_section title: "EnableBanking" do %>
+  <turbo-frame id="enable_banking-providers-panel">
+    <%= render "settings/providers/enable_banking_panel" %>
+  </turbo-frame>
+<% end %>
 </div>
