--- a/app/views/onboardings/trial.html.erb
+++ b/app/views/onboardings/trial.html.erb
@@ -96,7 +96,7 @@
       </div>
 
       <div class="flex flex-col gap-4 items-center">
-        <%= render DS::FilledIcon.new(icon: "line-chart", variant: :surface) %>
+        <%= render DS::FilledIcon.new(icon: "chart-line", variant: :surface) %>
         <p class="text-sm text-primary text-center">Performance and investment returns across portfolio</p>
       </div>
 
