--- a/app/views/pages/dashboard/_balance_sheet.html.erb
+++ b/app/views/pages/dashboard/_balance_sheet.html.erb
@@ -37,13 +37,15 @@
 
         <div class="bg-container-inset rounded-xl p-1 space-y-1 overflow-x-auto">
           <div class="px-4 py-2 flex items-center uppercase text-xs font-medium text-secondary">
-            <div class="w-40">Name</div>
+            <div class="w-40">
+              <p><%= t("pages.dashboard.balance_sheet.name", default: "Name") %></p>
+            </div>
             <div class="ml-auto text-right flex items-center gap-6">
               <div class="w-24">
-                <p>Weight</p>
+                <p><%= t("pages.dashboard.balance_sheet.weight", default: "Weight") %></p>
               </div>
               <div class="w-40">
-                <p>Value</p>
+                <p><%= t("pages.dashboard.balance_sheet.value", default: "Value") %></p>
               </div>
             </div>
           </div>
