--- a/app/views/shared/notifications/_notice.html.erb
+++ b/app/views/shared/notifications/_notice.html.erb
@@ -13,7 +13,7 @@
 
   <div class="space-y-4">
     <div class="space-y-1">
-      <%= tag.p message, class: "text-primary text-sm font-medium" %>
+      <%= tag.p message, class: "text-primary text-sm font-medium truncate min-w-0", title: message %>
 
       <% if description %>
         <%= tag.p description, class: "text-secondary text-sm" %>
