--- a/app/views/settings/providers/_simplefin_panel.html.erb
+++ b/app/views/settings/providers/_simplefin_panel.html.erb
@@ -15,7 +15,7 @@
 
   <% if defined?(@error_message) && @error_message.present? %>
     <div class="p-2 rounded-md bg-destructive/10 text-destructive text-sm overflow-hidden">
-      <p class="truncate" title="<%= @error_message %>"><%= @error_message %></p>
+      <p class="line-clamp-3" title="<%= @error_message %>"><%= @error_message %></p>
     </div>
   <% end %>
 
