--- a/app/views/settings/providers/show.html.erb
+++ b/app/views/settings/providers/show.html.erb
@@ -27,9 +27,9 @@
   <% end %>
 
 
-<%= settings_section title: "EnableBanking" do %>
-  <turbo-frame id="enable_banking-providers-panel">
-    <%= render "settings/providers/enable_banking_panel" %>
-  </turbo-frame>
-<% end %>
+  <%= settings_section title: "Enable Banking (beta)", collapsible: true, open: false do %>
+    <turbo-frame id="enable_banking-providers-panel">
+      <%= render "settings/providers/enable_banking_panel" %>
+    </turbo-frame>
+  <% end %>
 </div>
