--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,17 +1,17 @@
 <%# locals: (category:) %>
 
 <div id="<%= dom_id(category) %>" class="flex justify-between items-center px-4 pb-4 <%= "pt-4" unless category.subcategory? %> <%= "pb-4" unless category.subcategories.any? %> bg-container">
-  <div class="flex w-full items-center gap-2.5">
+  <div class="flex flex-1 min-w-0 items-center gap-2.5 pr-2">
     <% if category.subcategory? %>
       <span style="color: <%= category.color %>">
         <%= icon "corner-down-right", size: "sm", color: "current", class: "ml-2" %>
       </span>
     <% end %>
 
-    <%= render partial: "categories/badge", locals: { category: category } %>
+    <%= render partial: "categories/badge", locals: { category: category, show_details: true} %>
   </div>
 
-  <div class="justify-self-end">
+  <div class="justify-self-end shrink-0">
     <%= render DS::Menu.new do |menu| %>
       <% menu.with_item(variant: "link", text: t(".edit"), icon: "pencil", href: edit_category_path(category), data: { turbo_frame: :modal }) %>
 
