feat: Add maxlength attribute to details text area in form

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -67,7 +67,7 @@
         <% unless category.parent? %>
           <%= f.select :parent_id, categories.pluck(:name, :id), { include_blank: "(unassigned)", label: "Parent category (optional)" }, disabled: category.parent?, data: { action: "change->category#handleParentChange" } %>
         <% end %>
-        <%= f.text_area :details, label: "Details (optional)", placeholder: "Details...", rows: 3 %>
+        <%= f.text_area :details, label: "Details (optional)", placeholder: "Details...", rows: 3, maxlength: 1000 %>
       </div>
     </section>
 
