--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -24,8 +24,17 @@
     <%= f.money_field :amount, label: t(".amount"), required: true %>
     <%= f.fields_for :entryable do |ef| %>
       <% categories = params[:nature] == "inflow" ? income_categories : expense_categories %>
-      <%= ef.collection_select :category_id, categories, :id, ->(cat) { cat.details.present? ? "#{cat.name} - #{cat.details.truncate(60)}"
-                                                                          : cat.name }, { prompt: t(".category_prompt"), label: t(".category") } %>
+      <%# Build a sorted category list: parents first, then children under each parent, all alphabetically %>
+      <% sorted_categories = categories.select { |cat| cat.parent_id.nil? }.sort_by(&:name).flat_map do |parent|
+           [parent] + parent.subcategories.sort_by(&:name)
+         end %>
+      <%= ef.collection_select :category_id, sorted_categories, :id, ->(cat) {
+            if cat.parent_id.nil?
+              cat.details.present? ? "#{cat.name} - #{cat.details.truncate(60)}" : cat.name
+            else
+              "  • " + (cat.details.present? ? "#{cat.name} - #{cat.details.truncate(60)}" : cat.name)
+            end
+          }, { prompt: t(".category_prompt"), label: t(".category") } %>
     <% end %>
     <%= f.date_field :date, label: t(".date"), required: true, min: Entry.min_supported_date, max: Date.current, value: Date.current %>
   </section>
